# starting-ragchatbot-codebase

./: .flake8  .gitignore  .pre-commit-config.yaml  CLAUDE.md  dev.sh  frontend-changes.md  pyproject.toml
backend/: ai_generator.py  app.py  search_tools.py  session_manager.py  test_sequential_tools.py
backend/tests/: conftest.py  test_actual_api_call.py  test_ai_generator.py  test_api_endpoint.py  test_api_endpoints.py  test_app_factory.py  test_content_query_issue.py  test_rag_system.py  test_search_tools.py  test_vector_store.py
frontend/: index.html  script.js  style.css
